remove blockquote for about.html

--- a/about.html
+++ b/about.html
@@ -47,42 +47,35 @@
           <!--<h1 class="page-title">Sobre Nós</h1> -->
           <h3>Sobre a ILDM Web Design</h3>
           <p>
-            <blockquote>
-              Fundada em 2023, a ILDM Web Design é uma agência apaixonada por
-              criar sites modernos, funcionais e visualmente impressionantes.
-              Nosso objetivo é transformar ideias em soluções digitais de alto
-              impacto, atendendo clientes de diversos segmentos com serviços
-              personalizados e inovadores. Acreditamos que um site bem projetado
-              é mais do que uma simples presença online – ele é uma ferramenta
-              estratégica para conectar empresas a seus clientes de forma
-              eficaz.
-            </blockquote>
+            Fundada em 2023, a ILDM Web Design é uma agência apaixonada por
+            criar sites modernos, funcionais e visualmente impressionantes.
+            Nosso objetivo é transformar ideias em soluções digitais de alto
+            impacto, atendendo clientes de diversos segmentos com serviços
+            personalizados e inovadores. Acreditamos que um site bem projetado é
+            mais do que uma simples presença online – ele é uma ferramenta
+            estratégica para conectar empresas a seus clientes de forma eficaz.
           </p>
           <h3>Tecnologias e Inovação</h3>
           <p>
-            <blockquote>
-              Somos especializados nas tecnologias mais atuais do mercado, como
-              HTML5, CSS3, JavaScript, React, Next.js e plataformas de e-commerce
-              como Shopify e WooCommerce. A ILDM Web Design investe constantemente
-              em inovação, garantindo que todos os nossos projetos sigam as
-              tendências mais recentes de design e usabilidade, proporcionando a
-              melhor performance em qualquer dispositivo. Com uma abordagem ágil e
-              adaptativa, estamos sempre prontos para enfrentar novos desafios e
-              entregar soluções de alta qualidade.
-            </blockquote>
+            Somos especializados nas tecnologias mais atuais do mercado, como
+            HTML5, CSS3, JavaScript, React, Next.js e plataformas de e-commerce
+            como Shopify e WooCommerce. A ILDM Web Design investe constantemente
+            em inovação, garantindo que todos os nossos projetos sigam as
+            tendências mais recentes de design e usabilidade, proporcionando a
+            melhor performance em qualquer dispositivo. Com uma abordagem ágil e
+            adaptativa, estamos sempre prontos para enfrentar novos desafios e
+            entregar soluções de alta qualidade.
           </p>
           <h3>Nosso Fit Cultural</h3>
           <p>
-            <blockquote>
-              Acreditamos que a cultura da nossa empresa é a base do nosso
-              sucesso. Na ILDM Web Design, cultivamos um ambiente colaborativo,
-              criativo e dinâmico, onde cada membro da equipe é incentivado a
-              compartilhar ideias e contribuir com sua expertise. Valorizamos a
-              transparência, o respeito e a dedicação, criando um espaço onde a
-              inovação pode prosperar. Trabalhamos com paixão e compromisso,
-              focados em entregar resultados que excedam as expectativas de nossos
-              clientes.
-            </blockquote>
+            Acreditamos que a cultura da nossa empresa é a base do nosso
+            sucesso. Na ILDM Web Design, cultivamos um ambiente colaborativo,
+            criativo e dinâmico, onde cada membro da equipe é incentivado a
+            compartilhar ideias e contribuir com sua expertise. Valorizamos a
+            transparência, o respeito e a dedicação, criando um espaço onde a
+            inovação pode prosperar. Trabalhamos com paixão e compromisso,
+            focados em entregar resultados que excedam as expectativas de nossos
+            clientes.
           </p>
         </article>
       </div>
